--- a/client/src/Components/Nav/Nav.module.css
+++ b/client/src/Components/Nav/Nav.module.css
@@ -50,6 +50,7 @@
         top: 5px;
         left: 5px;
         font-size: 2rem;
+        z-index: 15;
     }
 
     .displayNoneR{
@@ -65,6 +66,8 @@
         position: absolute;
         top: 25px;
         left: 0px;
+        background-color: #000;
+        z-index: 5;
     }
 
     .divLinks div{
@@ -79,6 +82,7 @@
         position: absolute;
         top: 0px;
         right: 5px;
+        z-index: 15;
     }
 
     .tags{
